--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!-- Below code required for HTML pages -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Nicco Vernasco | Web Developer | Portfolio</title>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;700&family=Montserrat:wght@300;700&family=Nanum+Pen+Script&display=swap"
 	 rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -31,7 +32,9 @@
           <li>Meeting other super-duper developers</li>
           <li>Defeating villainous code around the internet.</li>
         </ul>
-
+<!-- Horizontal ruler -->
+<hr>
+<!-- Ordered list -->
       <p>My all time favorite movies, in order, are:</p>
         <ol>
           <li>The Shining</li>
@@ -41,20 +44,24 @@
       
         <p>Please take a look at my website and feel free to <a href="#contact">Contact Me!</a></p>
     </section>
+		
+		<hr>
 
-    <!-- About Me -->
+<!-- About Me -->
     <section>
       <h2 class="border-top">About Nicco</h2>
         <p>I have gone through many different careers before ultimately ending up with Thinkful. Most of these positions were customer-facing, so I am very excited to potentially escape that life :).</p>
+	<p>I enjoy playing video games, spending time with my wife and dog, and watching NBA basketball games. I'm a fan of the Indianapolis Pacers and Los Angeles Lakers.</p>    
+	    
 
-        <p>As a new student at <a href="http://thinkful.com">Thinkful</a>, I think I've finally found my place.</a>
+        <p>As a new student at <a href="http://thinkful.com">Thinkful</a>, I think I've finally found my place.</p>
 
         <p>If you're looking to hire a new developer, please reach out at any time. </p>
       </section>
 
       <!-- Contact -->
       <section id="contact">
-        <h2 class="border-top">Contact Nicco</h2>
+        <h3 class="border-top">Contact Nicco</h3>
         <p>Please feel free to contact or follow me:</p>
         <ol>
           <li>
